--- a/.github/workflows/rpm.yml
+++ b/.github/workflows/rpm.yml
@@ -64,6 +64,7 @@ jobs:
         run: |
           if [ -d "${{ inputs.package }}/sources" ]; then
             echo "Copying sources from ${{ inputs.package }}/sources"
+            cp -r ${{ inputs.package }}/sources/* /root/rpmbuild/SOURCES/
           else
             echo "No sources directory found for ${{ inputs.package }}"
           fi
