--- a/.github/workflows/build-rpm.yml
+++ b/.github/workflows/build-rpm.yml
@@ -19,7 +19,7 @@ on:
         description: "Package name to build (e.g., postfix)"
 
 permissions:
-  contents: read
+  contents: write
   packages: write
 
 jobs:
@@ -78,12 +78,51 @@ jobs:
         run: |
           rpmbuild -ba /root/rpmbuild/SPECS/${{ inputs.package }}.spec
 
-      - name: Upload RPM artifacts
+      - name: List built packages
+        run: |
+          echo "=== Built RPMs ==="
+          find /root/rpmbuild/RPMS -type f -name "*.rpm"
+          echo "=== Built SRPMs ==="
+          find /root/rpmbuild/SRPMS -type f -name "*.rpm"
+
+      - name: Prepare artifacts for upload
+        run: |
+          mkdir -p /tmp/artifacts
+          find /root/rpmbuild/RPMS -type f -name "*.rpm" -exec cp {} /tmp/artifacts/ \;
+          find /root/rpmbuild/SRPMS -type f -name "*.rpm" -exec cp {} /tmp/artifacts/ \;
+          ls -lh /tmp/artifacts/
+
+      - name: Upload artifacts
         uses: actions/upload-artifact@v4.4.3
         with:
-          name: ${{ inputs.package }}-${{ inputs.version }}-rhel${{ matrix.rhel_version }}-rpm
-          path: |
-            /root/rpmbuild/RPMS/*/*.rpm
-            /root/rpmbuild/SRPMS/*.rpm
+          name: ${{ inputs.package }}-rhel${{ matrix.rhel_version }}-rpm
+          path: /tmp/artifacts/*.rpm
           if-no-files-found: error
-          retention-days: 30
+
+  create-release:
+    name: Create GitHub Release
+    needs: build-rpm
+    runs-on: ubuntu-latest
+    if: github.event_name == 'workflow_dispatch'
+
+    steps:
+      - name: Download all artifacts
+        uses: actions/download-artifact@v4
+        with:
+          path: artifacts
+
+      - name: Display structure of downloaded files
+        run: ls -R artifacts
+
+      - name: Create Release
+        uses: softprops/action-gh-release@v2
+        with:
+          tag_name: ${{ inputs.package }}-${{ inputs.version }}
+          name: ${{ inputs.package }} ${{ inputs.version }}
+          draft: false
+          prerelease: false
+          files: |
+            artifacts/**/*.rpm
+          generate_release_notes: true
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
