--- a/.github/workflows/build-rpm.yml
+++ b/.github/workflows/build-rpm.yml
@@ -42,8 +42,7 @@ jobs:
 
       - name: Install build dependencies
         run: |
-          dnf install -y epel-release rpm-build rpmdevtools tar dnf-plugins-core \
-            gcc-toolset-15-gcc gcc-toolset-15-gcc-plugin-annobin gcc-toolset-15-gcc-c++
+          dnf install -y epel-release rpm-build rpmdevtools tar dnf-plugins-core
           if [ "${{ matrix.rhel_version }}" = "9" ]; then
             dnf config-manager --set-enabled crb
           fi
