--- a/.github/workflows/build-rpm.yml
+++ b/.github/workflows/build-rpm.yml
@@ -42,7 +42,7 @@ jobs:
 
       - name: Install build dependencies
         run: |
-          dnf install -y epel-release rpm-build rpmdevtools tar dnf-plugins-core
+          dnf install -qy --setopt install_weak_deps=False epel-release rpm-build rpmdevtools tar dnf-plugins-core
           if [ "${{ matrix.rhel_version }}" = "9" ]; then
             dnf config-manager --set-enabled crb
           fi
