--- a/.github/workflows/build-rpm.yml
+++ b/.github/workflows/build-rpm.yml
@@ -64,6 +64,9 @@ jobs:
       - name: Setup RPM build environment
         run: |
           echo "%_topdir /root/rpmbuild" > ~/.rpmmacros
+          echo "%global debug_package %{nil}" >> ~/.rpmmacros
+          echo "%define _build_id_links none" >> ~/.rpmmacros
+
           rpmdev-setuptree
 
       - name: Copy SPEC file
